# simplenote-automation

./: .env.template  .gitignore  GEMINI.md  README.md  main.py  pyproject.toml  test_main.py
